# SOFA

./: .gitignore  LICENSE  README.MD  README_zh.MD  binarize.py  config.yaml  ctc_loss.py  data_augmentation.py  dataloader.py  dataset.py  evaluate.py  export_onnx.py  infer.py  inference.py  model.py  onnx_infer.py  preprocess.py  pyproject.toml  requirements.txt  train.py  trainer.py  utils.py  vocab.yaml  vocab_gen.py
configs/: binarize_config.yaml  config copy.yaml  config.yaml  config_new.yaml  config_old.yaml  finetune_config.yaml  train_config.yaml
dictionary/: opencpop-extension.txt
documents/: data_providers.md
modules/: __init__.py
modules/AP_detector/: __init__.py  base_detector.py  loudnesss_pectralcentroid_detector.py  none_detector.py
modules/g2p/: __init__.py  base_g2p.py  dictionary_g2p.py  none_g2p.py  phoneme_g2p.py  readme_g2p.md  readme_g2p_zh.md
modules/jit/: __init__.py  forced_alignment.py
modules/layer/activation/: GLU.py
modules/layer/backbone/: Unet.py  unet.py
modules/loss/: GHMLoss.py  GHM_Loss.py  __init__.py  binary_emd_loss.py  forced_alignment_loss.py  ghm_Loss.py
modules/model/: forced_aligner_model.py  lightning_model.py
modules/network/: __init__.py  unet.py
modules/rmvpe/: inference.py  spec.py
modules/scheduler/: __init__.py  gaussian_ramp_up_scheduler.py  none_scheduler.py
modules/task/: forced_alignment copy.py  forced_alignment.py  lightning.py
modules/utils/: export_tool.py  feature_extraction.py  get_melspec.py  label.py  load_wav.py  metrics.py  metrics_test.py  plot.py  post_processing.py  wsd_scheduler.py
tests/: __init__.py
tests/data/: datamodule_test.py  label_test.py  manager_test.py  vocab_test.py
tests/network/: conv_next_test.py
(+45 files in other folders)
